[gd_scene load_steps=9 format=2]

[ext_resource path="res://testroom.gd" type="Script" id=1]
[ext_resource path="res://rooms/room5.tscn" type="PackedScene" id=2]
[ext_resource path="res://player.tscn" type="PackedScene" id=3]
[ext_resource path="res://DirectionalLight.gd" type="Script" id=4]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 24, 192, 12 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 48, 384, 24 )

[sub_resource type="SpatialMaterial" id=3]

[node name="testroom" type="Spatial"]
script = ExtResource( 1 )
room = ExtResource( 2 )

[node name="Camera" parent="." instance=ExtResource( 5 )]

[node name="light" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20.8129, 0 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.77
light_specular = 0.56
shadow_enabled = true
omni_range = 34.4
script = ExtResource( 4 )

[node name="player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )

[node name="wall1" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -168, -18 )

[node name="CollisionShape" type="CollisionShape" parent="wall1"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="wall1"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="wall2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -168, 18 )

[node name="CollisionShape" type="CollisionShape" parent="wall2"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="wall2"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="wall3" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 23.5, -168, 0 )

[node name="CollisionShape" type="CollisionShape" parent="wall3"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="wall3"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="wall4" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -23.5, -168, 0 )

[node name="CollisionShape" type="CollisionShape" parent="wall4"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="wall4"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )
